<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_auto_datos">

    <fragment
        android:id="@+id/nav_auto_datos"
        android:name="com.datoautos.ui.AutosDatos.AutosDatosFragment"
        android:label="@string/menu_auto_datos"
        tools:layout="@layout/fragment_autos_datos" >
        <action
            android:id="@+id/action_nav_auto_datos_to_addAutosDatosFragment"
            app:destination="@id/addAutosDatosFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.datoautos.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.datoautos.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/addAutosDatosFragment"
        android:name="com.datoautos.ui.AutosDatos.addAutosDatosFragment"
        android:label="fragment_add_autos_datos"
        tools:layout="@layout/fragment_add_autos_datos" >
        <action
            android:id="@+id/action_addAutosDatosFragment_to_nav_auto_datos"
            app:destination="@id/nav_auto_datos" />
    </fragment>
</navigation>